--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
     <section id="header" class="promo">
         <div class="container">
             <header class="header">
-                <a href="#" class="header__logo"><img src="icons/logo.png" alt=""></a>
+                <a href="" class="header__logo"><img src="icons/logo.png" alt=""></a>
                 <div class="header__title">
                     Официальный представитель
                     <span>Garmin, Polar, Suunto</span>
@@ -89,7 +89,7 @@
                     <div class="advantage__name">Учим бегать</div>
                     <div class="advatage__text">Помогаем с обучением
                         правильной технике бега!<br>
-                        Дружим с крупнейшей школой бега в России - <a class="advantage__link" href="#">I LOVE
+                        Дружим с крупнейшей школой бега в России - <a class="advantage__link" href="">I LOVE
                             RUNNING.</a> </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
             </div>
         </div>
     </section>
-    <section class="slider">
+    <div class="slider">
         <div class="container">
             <div class="slider__wrapper">
                 <div class="slider__puls">
@@ -132,7 +132,7 @@
                 <button class="slider__button slider__button_next"><img src="icons/next.svg" alt=""></button>
             </div>
         </div>
-    </section>
+    </div>
     <section id="catalog" class="catalog">
         <div class="container">
             <h2 class="title">каталог пульсометров</h2>
@@ -155,7 +155,7 @@
                             <div class="product__name">Пульсометр Polar FT12</div>
                             <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
-                            <a href="#" class="product__link">подробнее</a>
+                            <a href="" class="product__link">подробнее</a>
                         </div>
                         <div class="product-item__info">
                             <ul class="product-item__info-inner">
@@ -167,7 +167,7 @@
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.
                                 </li>
                             </ul>
-                            <a href="#" class="product__link_back">назад</a>
+                            <a href="" class="product__link_back">назад</a>
                         </div>
                     </div>
                     <div class="hr"></div>
@@ -186,7 +186,7 @@
                             <div class="product__name">Пульсометр Suunto M2</div>
                             <div class="product__dscr">Пульсометр начального уровня с комфортным тканевым ремешком
                             </div>
-                            <a href="#" class="product__link">подробнее</a>
+                            <a href="" class="product__link">подробнее</a>
                         </div>
                         <div class="product-item__info">
                             <ul class="product-item__info-inner">
@@ -198,7 +198,7 @@
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.
                                 </li>
                             </ul>
-                            <a href="#" class="product__link_back">назад</a>
+                            <a href="" class="product__link_back">назад</a>
                         </div>
                     </div>
                     <div class="hr"></div>
@@ -217,7 +217,7 @@
                             <div class="product__name">Пульсометр Polar FT1</div>
                             <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
-                            <a href="#" class="product__link">подробнее</a>
+                            <a href="" class="product__link">подробнее</a>
                         </div>
                         <div class="product-item__info">
                             <ul class="product-item__info-inner">
@@ -229,7 +229,7 @@
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.
                                 </li>
                             </ul>
-                            <a href="#" class="product__link_back">назад</a>
+                            <a href="" class="product__link_back">назад</a>
                         </div>
                     </div>
                     <div class="hr"></div>
@@ -248,7 +248,7 @@
                             <div class="product__name">Пульсометр Polar FT1</div>
                             <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
-                            <a href="#" class="product__link">подробнее</a>
+                            <a href="" class="product__link">подробнее</a>
                         </div>
                         <div class="product-item__info">
                             <ul class="product-item__info-inner">
@@ -260,7 +260,7 @@
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.
                                 </li>
                             </ul>
-                            <a href="#" class="product__link_back">назад</a>
+                            <a href="" class="product__link_back">назад</a>
                         </div>
                     </div>
                     <div class="hr"></div>
@@ -279,7 +279,7 @@
                             <div class="product__name">Пульсометр Polar FT1</div>
                             <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
-                            <a href="#" class="product__link">подробнее</a>
+                            <a href="" class="product__link">подробнее</a>
                         </div>
                         <div class="product-item__info">
                             <ul class="product-item__info-inner">
@@ -291,7 +291,7 @@
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.
                                 </li>
                             </ul>
-                            <a href="#" class="product__link_back">назад</a>
+                            <a href="" class="product__link_back">назад</a>
                         </div>
                     </div>
                     <div class="hr"></div>
@@ -311,7 +311,7 @@
                             <div class="product__dscr">Улучшенная версия Polar FT1, имеющая следующие улучшения:
 
                             </div>
-                            <a href="#" class="product__link">подробнее</a>
+                            <a href="" class="product__link">подробнее</a>
                         </div>
                         <div class="product-item__info">
                             <ul class="product-item__info-inner">
@@ -323,7 +323,7 @@
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.
                                 </li>
                             </ul>
-                            <a href="#" class="product__link_back">назад</a>
+                            <a href="" class="product__link_back">назад</a>
                         </div>
                     </div>
                     <div class="hr"></div>
@@ -345,7 +345,7 @@
                             <div class="product__name">Пульсометр Polar FT1</div>
                             <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
-                            <a href="#" class="product__link">подробнее</a>
+                            <a href="" class="product__link">подробнее</a>
                         </div>
                         <div class="product-item__info">
                             <ul class="product-item__info-inner">
@@ -357,7 +357,7 @@
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.
                                 </li>
                             </ul>
-                            <a href="#" class="product__link_back">назад</a>
+                            <a href="" class="product__link_back">назад</a>
                         </div>
                     </div>
                     <div class="hr"></div>
@@ -378,7 +378,7 @@
                             <div class="product__name">Пульсометр Polar FT1</div>
                             <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
-                            <a href="#" class="product__link">подробнее</a>
+                            <a href="" class="product__link">подробнее</a>
                         </div>
                         <div class="product-item__info">
                             <ul class="product-item__info-inner">
@@ -390,7 +390,7 @@
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.
                                 </li>
                             </ul>
-                            <a href="#" class="product__link_back">назад</a>
+                            <a href="" class="product__link_back">назад</a>
                         </div>
                     </div>
                     <div class="hr"></div>
@@ -409,7 +409,7 @@
                             <div class="product__name">Пульсометр Polar FT1</div>
                             <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
-                            <a href="#" class="product__link">подробнее</a>
+                            <a href="" class="product__link">подробнее</a>
                         </div>
                         <div class="product-item__info">
                             <ul class="product-item__info-inner">
@@ -421,7 +421,7 @@
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.
                                 </li>
                             </ul>
-                            <a href="#" class="product__link_back">назад</a>
+                            <a href="" class="product__link_back">назад</a>
                         </div>
                     </div>
                     <div class="hr"></div>
@@ -498,15 +498,14 @@
     <footer class="footer">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.4304812014825!2d37.64480195195108!3d55.76839498046216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1586193650594!5m2!1sru!2sru"
-            width="100%" height="630" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-            tabindex="0"></iframe>
+            style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <div class="footer__info">
             <address class="footer__address">Москва, Мясницкий проезд, д.3с1</address>
             <a href="tel:+74999228974" class="footer__phone">8 (499) 922-89-74</a>
             <div class="footer__social">
-                <a href="#"><img src="icons/facebook.svg" alt="facebook"></a>
-                <a href="#"><img src="icons/instagram.svg" alt="instagram"></a>
-                <a href="#"><img src="icons/pinterest.svg" alt="pinterest"></a>
+                <a href=""><img src="icons/facebook.svg" alt="facebook"></a>
+                <a href=""><img src="icons/instagram.svg" alt="instagram"></a>
+                <a href=""><img src="icons/pinterest.svg" alt="pinterest"></a>
             </div>
         </div>
     </footer>
@@ -514,7 +513,7 @@
     <!-- Modal -->
     <div class="modal">
         <div class="modal__item" id="consult">
-            <div class="modal__close">&times</div>
+            <div class="modal__close">&times;</div>
             <div class="modal__title">Просто заполните форму заявки</div>
             <div class="modal__dscr">и мы перезвоним вам в течении 10 минут</div>
             <form action="#" class="feed-form">
@@ -527,7 +526,7 @@
 
         </div>
         <div class="modal__item" id="order">
-            <div class="modal__close">&times</div>
+            <div class="modal__close">&times;</div>
             <div class="modal__title">Ваш заказ:</div>
             <div class="modal__dscr">Пульсометр Polar FT1</div>
             <div>
@@ -543,7 +542,7 @@
         </div>
 
         <div class="modal__item modal__item_mini" id="thanks">
-            <div class="modal__close">&times</div>
+            <div class="modal__close">&times;</div>
             <div class="modal__title">Спасибо за вашу заявку!</div>
             <div class="modal__dscr">Наш менеджер свяжется с вами
                 в ближайшее время!</div>
